apps/dev/oura-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oura-dashboard
  namespace: dev-oura-dashboard
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  rules:
  - host: oura-health-dev.landryzetam.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oura-dashboard
            port:
              number: 8501
  tls:
  - hosts:
    - oura-health-dev.landryzetam.net
    secretName: oura-dashboard-tls-cert
